<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Love</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_movie_name">Search Movie Name</string>
    <string name="go">GO</string>
    <string name="favs">Favs</string>
    <string name="movie_name">Name:</string>
    <string name="critics_rating">Score:</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="clear_screen">CLEAR</string>
    <string name="synopsis">Synopsis:</string>
    <string name="background">background</string>
    <string name="title_section1">Search Movies</string>
    <string name="title_section2">View Favorites</string>
    <string name="search_movies">Search Movies</string>
    <string name="favorites">Favorites</string>
    <string name="view_favorites">View Favorites</string>
    <string name="movie_planner">- OR -</string>
    <string name="view_latest">Get Latest Movies</string>
    <string name="back_to_main_view">Back to Main View</string>
    <string name="latest_movies">Latest Movies</string>
    <string name="waiting_for_movie_data">Waiting for movie data</string>
    <string name="movie">Movie</string>
    <string name="title">Title</string>
    <string name="filter_latest_movies">Filter Latest Movies</string>
    <string name="enter_uri">Enter URI</string>
    <string name="no_movies_found_">No movies found.</string>
    <string name="view_trailer">View More Info</string>
    <string name="view_movie_info_on_web">View Movie Info on Web</string>
    <string name="message_to_display_on_main_activity">Message to display on main activity</string>
    <string name="load_latest">Load Latest</string>
    <string name="cancel">Cancel</string>
    <string name="view_latest_movies">View Latest Movies</string>
    <string name="developer_info">Developer Info</string>
    
</resources>
