<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_red_dark"
    android:padding="10dp" >

    <TextView
        android:id="@+id/movietitle"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="@string/title"
        android:textStyle="bold"
        android:width="450dp" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/year"
        android:textStyle="bold"
        android:width="80dp" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:text="@string/rating"
        android:textStyle="bold"
        android:width="80dp" />

</LinearLayout>